<resources>

<!-- ********************* MAIN ACTIVITY ******************************** -->

    <string name="app_name">RecipesForNewbies</string>

<!-- *********************** ABOUT FRAGMENT ***************************** -->
    <string name="about">About</string>

<!-- ********************* WISHLIST FRAGMENT **************************** -->
    <string name="wishlistFragment">My wishlist</string>
    <string name="empty_wishlist">Oops… Your wishlist seems empty!\n Maybe you should try to add some recipes to it!</string>

<!-- ***************** WHAT'S IN MY FRIDGE FRAGMENT ********************* -->
    <string name="what_in_my_fridge">What\'s in my fridge?</string>
    <string name="button_search_recipe">Show me recipes!</string>
    <string name="empty">Your fridge looks empty!\n Add a new item or go shopping!</string>>
    <string name="search_hint">Search item</string>


<!-- ******************** SETTINGS FRAGMENT ***************************** -->
    <string name="chip_text_vege">Vegetarian</string>
    <string name="chip_text_vegan">Vegan</string>
    <string name="chip_text_omni">Omnivore</string>
    <string name="settings">Settings</string>
    <string name="settings_text">Recipes for Newbies Settings</string>
    <string name="units">Set units to metrics</string>


<!-- ************************** UTILS *********************************** -->
    <string name="error_null_text">Something went wrong!</string>
    <string name="search">Search</string>
    <string name="error402">Nothing much to see here…</string>

<!-- ************************** ABOUT *********************************** -->

    <string name="about_text">This application has been developed in Kotlin, in order to discover this language and Android programming. \nMade using the Spoonacular API. \nFor any suggestion or bug report,\n please contact me on GitHub, @lrobert42</string>

<!-- ****************** DETAILED RECIPE FRAGMENT ************************ -->

    <string name="add_to_favorite">Add recipe to wishlist</string>
    <string name="remove_from_favorite">Remove recipe from wishlist</string>
</resources>
