<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.recipesfornewbies.whatsinmyfridge.WhatsInMyFridgeViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <SearchView
            android:id="@+id/search_view_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:inputType="textCapSentences|textAutoCorrect"
            android:queryHint="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <androidx.appcompat.widget.AppCompatAutoCompleteTextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="150dp"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/search_view_ingredient">-->


        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/button_show_recipe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_view_ingredient" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fridge_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:emptyTextView="@{emptyView}"
            app:itemsInFridge="@{viewModel.ingredients}"
            app:layout_constraintBottom_toTopOf="@id/button_show_recipe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_view_ingredient" />

        <Button
            android:id="@+id/button_show_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/button_search_recipe"
            android:enabled="@{viewModel.showSearchButton}"
            android:onClick="@{() -> viewModel.onShowRecipesClicked()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="MAAAAAN"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_show_recipe"
            app:layout_constraintTop_toBottomOf="@+id/fridge_list_recycler_view"
            android:onClick="@{() -> viewModel.onButtonClearClicked()}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>